@@ -11,15 +11,15 @@ import org.apache.commons.httpclient.protocol.Protocol;
 import org.simpleframework.xml.core.Persister;
 import org.simpleframework.xml.stream.Format;
 
+import javax.xml.bind.DatatypeConverter;
 import javax.xml.stream.XMLStreamException;
 import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
 import java.io.InputStreamReader;
 import java.rmi.RemoteException;
-import java.util.Base64;
 import java.util.zip.GZIPInputStream;
 
-public class WSDistribuicaoDFe {
+public class WSDistribuicaoCTe {
 
     /**
      * Metodo para consultar os conhecimentos de transporte e retorna uma String<br>
@@ -50,15 +50,16 @@ public class WSDistribuicaoDFe {
         if (conteudoEncode == null || conteudoEncode.length() == 0) {
             return "";
         }
-        final byte[] conteudo = Base64.getDecoder().decode(conteudoEncode);
+        //final byte[] conteudo = Base64.getDecoder().decode(conteudoEncode);//java 8
+        final byte[] conteudo = DatatypeConverter.parseBase64Binary(conteudoEncode);//java 7
         try (GZIPInputStream gis = new GZIPInputStream(new ByteArrayInputStream(conteudo))) {
             try (BufferedReader bf = new BufferedReader(new InputStreamReader(gis, "UTF-8"))) {
-                String outStr = "";
+                StringBuilder outStr = new StringBuilder();
                 String line;
                 while ((line = bf.readLine()) != null) {
-                    outStr += line;
+                    outStr.append(line);
                 }
-                return outStr;
+                return outStr.toString();
             }
         }
     }
@@ -66,5 +67,4 @@ public class WSDistribuicaoDFe {
     public static <T> T xmlToObject(final String xml, final Class<T> classe) throws Exception {
         return new Persister(new DFRegistryMatcher(), new Format(0)).read(classe, xml);
     }
-
 }
